Camino only - Bug 240760:Make Find menu item focus the quicksearch field when in the bookmark manager. r=smorgan sr=pink